[package]
name = "common_macros"
version = "0.1.1"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
description = "Provides common macros like `hash_map!` or `hash_set!` (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["hash", "map", "macros", "common"]

documentation = "https://docs.rs/common_macros"
repository = "https://github.com/rustonaut/common_macros"

[dependencies]
